Commit edits to email and copyright info

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                <h1>Connect </h1>
              </div>
              <div id="bio-skills-head-spacer">
-<p> Email me at juliemtseif at gmail dot com </p> </div> </div> </div>
+<p> Email me at email-to-be-added at gmail dot com </p> </div> </div> </div>
 
 
         </div>
@@ -201,7 +201,7 @@
     <!-- Begin webpage footer -->
 
     <div class="container-fluid" id="attribution" style="height: 100px;">
-       <center>&copy; 2019 Julie Seif </center> 
+       <center>&copy; 2019 Julie Maria Teresa </center> 
     </div>
 
     <!-- End webpage footer -->
